--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <nav>
         <ul>
             <li>
-                <a href="timline.html">Timeline</a>
+                <a href="timeline.html">Timeline</a>
             </li>
             <li>
                 <a href="overall.html">Overall</a>
