--- a/timeline.html
+++ b/timeline.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <!-- <meta http-equiv="X-UA-Compatible" content="IE=edge"> -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Ice Transformation</title>
     <meta name="description" content="Ice Transformation — Iteration 2, Thesis I (Home Page)">
@@ -50,6 +50,7 @@
             <span class="js-mattePresentationPaper1">Matte Presentation Paper 1</span>
             <span class="js-mattePresentationPaper2">Matte Presentation Paper 2</span>
             <span class="js-mattePresentationPaper3">Matte Presentation Paper 3</span>
+            <span class="js-reset">RESET</span>
         </div>
     </div>
 </body>
