--- a/timeline.html
+++ b/timeline.html
@@ -10,15 +10,17 @@
     <link rel="shortcut icon" type="image/png" href="./assets/img/DSC_4544.JPG" />
     <link rel="stylesheet" href="./css/timeline.css">
     <link rel="stylesheet" href="https://use.typekit.net/sos3kuf.css">
-    <script type="text/javascript" src="./assets/lib/airtable.browser.js" ></script>
+    <script type="text/javascript" src="./js/airtable.browser.js" ></script>
     <script type="text/javascript" src="./js/script.js" defer></script>
 </head>
 <body>
-    <h1>Transformation</h1>
+    <h1>
+        <a href="index.html">Transformation</a>
+    </h1>
     <nav>
         <ul>
             <li>
-                <a href="timeline.html">Timeline</a>
+                Timeline
             </li>
             <li>
                 <a href="overall.html">Overall</a>
