Update - without API, with imgs in grid

--- a/timeline.html
+++ b/timeline.html
@@ -10,8 +10,8 @@
     <link rel="shortcut icon" type="image/png" href="./assets/img/DSC_4544.JPG" />
     <link rel="stylesheet" href="./css/timeline.css">
     <link rel="stylesheet" href="https://use.typekit.net/sos3kuf.css">
-    <script type="text/javascript" src="./js/airtable.browser.js" ></script>
-    <script type="text/javascript" src="./js/script.js" defer></script>
+    <!-- <script type="text/javascript" src="./js/airtable.browser.js" ></script> -->
+    <!-- <script type="text/javascript" src="./js/script.js" defer></script> -->
 </head>
 <body>
     <h1>
@@ -42,7 +42,8 @@
         </ul>
     </nav> -->
     <div class="js-container">
-        <div class="js-filter">
+        <div class="js-filter-material">
+            <span class="js-reset">RESET</span>
             <span class="js-ceramicPlate">Ceramic Plate</span>
             <span class="js-glassBottle">Glass Bottle</span>
             <span class="js-glassVase">Glass Vase</span>
@@ -52,7 +53,183 @@
             <span class="js-mattePresentationPaper1">Matte Presentation Paper 1</span>
             <span class="js-mattePresentationPaper2">Matte Presentation Paper 2</span>
             <span class="js-mattePresentationPaper3">Matte Presentation Paper 3</span>
-            <span class="js-reset">RESET</span>
+        </div>
+        <div class="js-filter-time">
+            <span class="time" class="js-01">0:00:00</span>
+            <span class="time" class="js-02">0:10:00</span>
+            <span class="time" class="js-03">0:20:00</span>
+            <span class="time" class="js-04">0:30:00</span>
+            <span class="time" class="js-05">0:40:00</span>
+            <span class="time" class="js-06">0:50:00</span>
+            <span class="time" class="js-07">1:00:00</span>
+            <span class="time" class="js-08">1:10:00</span>
+            <span class="time" class="js-09">1:20:00</span>
+            <span class="time" class="js-10">1:30:00</span>
+            <span class="time" class="js-11">1:40:00</span>
+            <span class="time" class="js-12">1:50:00</span>
+            <span class="time" class="js-13">2:00:00</span>
+            <span class="time" class="js-14">2:10:00</span>
+            <span class="time" class="js-15">2:20:00</span>
+            <span class="time" class="js-16">2:30:00</span>
+        </div>
+        <div class="img-container">
+            <div class="ice_material">
+                <img class="ice-img" src="/assets/img/ice_01_plate/ice_01_ceramicPlate-01.jpg" alt="Girl in a jacket">
+                <img class="ice-img" src="/assets/img/ice_01_plate/ice_01_ceramicPlate-02.jpg" alt="Girl in a jacket">
+                <img class="ice-img" src="/assets/img/ice_01_plate/ice_01_ceramicPlate-03.jpg" alt="Girl in a jacket">
+                <img class="ice-img" src="/assets/img/ice_01_plate/ice_01_ceramicPlate-04.jpg" alt="Girl in a jacket">
+                <img class="ice-img" src="/assets/img/ice_01_plate/ice_01_ceramicPlate-05.jpg" alt="Girl in a jacket">
+                <img class="ice-img" src="/assets/img/ice_01_plate/ice_01_ceramicPlate-06.jpg" alt="Girl in a jacket">
+                <img class="ice-img" src="/assets/img/ice_01_plate/ice_01_ceramicPlate-07.jpg" alt="Girl in a jacket">
+                <img class="ice-img" src="/assets/img/ice_01_plate/ice_01_ceramicPlate-08.jpg" alt="Girl in a jacket">
+                <img class="ice-img" src="/assets/img/ice_01_plate/ice_01_ceramicPlate-09.jpg" alt="Girl in a jacket">
+                <img class="ice-img" src="/assets/img/ice_01_plate/ice_01_ceramicPlate-10.jpg" alt="Girl in a jacket">
+                <img class="ice-img" src="/assets/img/ice_01_plate/ice_01_ceramicPlate-11.jpg" alt="Girl in a jacket">
+                <img class="ice-img" src="/assets/img/ice_01_plate/ice_01_ceramicPlate-12.jpg" alt="Girl in a jacket">
+                <img class="ice-img" src="/assets/img/ice_01_plate/ice_01_ceramicPlate-13.jpg" alt="Girl in a jacket">
+                <img class="ice-img" src="/assets/img/ice_01_plate/ice_01_ceramicPlate-14.jpg" alt="Girl in a jacket">
+                <img class="ice-img" src="/assets/img/ice_01_plate/ice_01_ceramicPlate-15.jpg" alt="Girl in a jacket">
+                <img class="ice-img" src="/assets/img/ice_01_plate/ice_01_ceramicPlate-17.jpg" alt="Girl in a jacket">
+            </div>
+            <div class="ice_material">
+                <img class="ice-img" src="/assets/img/ice_02_vase/ice_02_vase-01.jpg" alt="Girl in a jacket">
+                <img class="ice-img" src="/assets/img/ice_02_vase/ice_02_vase-02.jpg" alt="Girl in a jacket">
+                <img class="ice-img" src="/assets/img/ice_02_vase/ice_02_vase-03.jpg" alt="Girl in a jacket">
+                <img class="ice-img" src="/assets/img/ice_02_vase/ice_02_vase-04.jpg" alt="Girl in a jacket">
+                <img class="ice-img" src="/assets/img/ice_02_vase/ice_02_vase-05.jpg" alt="Girl in a jacket">
+                <img class="ice-img" src="/assets/img/ice_02_vase/ice_02_vase-06.jpg" alt="Girl in a jacket">
+                <img class="ice-img" src="/assets/img/ice_02_vase/ice_02_vase-07.jpg" alt="Girl in a jacket">
+                <img class="ice-img" src="/assets/img/ice_02_vase/ice_02_vase-08.jpg" alt="Girl in a jacket">
+                <img class="ice-img" src="/assets/img/ice_02_vase/ice_02_vase-09.jpg" alt="Girl in a jacket">
+                <img class="ice-img" src="/assets/img/ice_02_vase/ice_02_vase-10.jpg" alt="Girl in a jacket">
+                <img class="ice-img" src="/assets/img/ice_02_vase/ice_02_vase-11.jpg" alt="Girl in a jacket">
+                <img class="ice-img" src="/assets/img/ice_02_vase/ice_02_vase-12.jpg" alt="Girl in a jacket">
+                <img class="ice-img" src="/assets/img/ice_02_vase/ice_02_vase-13.jpg" alt="Girl in a jacket">
+                <img class="ice-img" src="/assets/img/ice_02_vase/ice_02_vase-14.jpg" alt="Girl in a jacket">
+                <img class="ice-img" src="/assets/img/ice_02_vase/ice_02_vase-15.jpg" alt="Girl in a jacket">
+            </div>
+            <div class="ice_material">
+                <img class="ice-img" src="/assets/img/ice_02_vase/ice_02_vase-15.jpg" alt="Girl in a jacket">
+                <img class="ice-img" src="/assets/img/ice_02_vase/ice_02_vase-14.jpg" alt="Girl in a jacket">
+                <img class="ice-img" src="/assets/img/ice_02_vase/ice_02_vase-12.jpg" alt="Girl in a jacket">
+                <img class="ice-img" src="/assets/img/ice_02_vase/ice_02_vase-11.jpg" alt="Girl in a jacket">
+                <img class="ice-img" src="/assets/img/ice_02_vase/ice_02_vase-10.jpg" alt="Girl in a jacket">
+                <img class="ice-img" src="/assets/img/ice_02_vase/ice_02_vase-13.jpg" alt="Girl in a jacket">
+                <img class="ice-img" src="/assets/img/ice_02_vase/ice_02_vase-09.jpg" alt="Girl in a jacket">
+                <img class="ice-img" src="/assets/img/ice_02_vase/ice_02_vase-08.jpg" alt="Girl in a jacket">
+                <img class="ice-img" src="/assets/img/ice_02_vase/ice_02_vase-07.jpg" alt="Girl in a jacket">
+                <img class="ice-img" src="/assets/img/ice_02_vase/ice_02_vase-06.jpg" alt="Girl in a jacket">
+                <img class="ice-img" src="/assets/img/ice_02_vase/ice_02_vase-05.jpg" alt="Girl in a jacket">
+                <img class="ice-img" src="/assets/img/ice_02_vase/ice_02_vase-04.jpg" alt="Girl in a jacket">
+                <img class="ice-img" src="/assets/img/ice_02_vase/ice_02_vase-03.jpg" alt="Girl in a jacket">
+                <img class="ice-img" src="/assets/img/ice_02_vase/ice_02_vase-02.jpg" alt="Girl in a jacket">
+                <img class="ice-img" src="/assets/img/ice_02_vase/ice_02_vase-01.jpg" alt="Girl in a jacket">
+            </div>
+            <div class="ice_material">
+                <img class="ice-img" src="/assets/img/ice_04_zaraBag/ice_04_zaraBag-09.jpg" alt="Girl in a jacket">
+                <img class="ice-img" src="/assets/img/ice_04_zaraBag/ice_04_zaraBag-08.jpg" alt="Girl in a jacket">
+                <img class="ice-img" src="/assets/img/ice_04_zaraBag/ice_04_zaraBag-07.jpg" alt="Girl in a jacket">
+                <img class="ice-img" src="/assets/img/ice_04_zaraBag/ice_04_zaraBag-06.jpg" alt="Girl in a jacket">
+                <img class="ice-img" src="/assets/img/ice_04_zaraBag/ice_04_zaraBag-05.jpg" alt="Girl in a jacket">
+                <img class="ice-img" src="/assets/img/ice_04_zaraBag/ice_04_zaraBag-04.jpg" alt="Girl in a jacket">
+                <img class="ice-img" src="/assets/img/ice_04_zaraBag/ice_04_zaraBag-03.jpg" alt="Girl in a jacket">
+                <img class="ice-img" src="/assets/img/ice_04_zaraBag/ice_04_zaraBag-02.jpg" alt="Girl in a jacket">
+                <img class="ice-img" src="/assets/img/ice_04_zaraBag/ice_04_zaraBag-01.jpg" alt="Girl in a jacket">
+            </div>
+            <div class="ice_material">
+                <img class="ice-img" src="/assets/img/ice_03_newspaper/DSC_4999.JPG" alt="Girl in a jacket">
+                <img class="ice-img" src="/assets/img/ice_03_newspaper/DSC_5002.JPG" alt="Girl in a jacket">
+                <img class="ice-img" src="/assets/img/ice_03_newspaper/DSC_5003.JPG" alt="Girl in a jacket">
+                <img class="ice-img" src="/assets/img/ice_03_newspaper/DSC_5004.JPG" alt="Girl in a jacket">
+                <img class="ice-img" src="/assets/img/ice_03_newspaper/DSC_5006.JPG" alt="Girl in a jacket">
+                <img class="ice-img" src="/assets/img/ice_03_newspaper/DSC_5009.JPG" alt="Girl in a jacket">
+            </div>
+            <div class="ice_material">
+                <img class="ice-img" src="/assets/img/ice_02_vase/ice_02_vase-01.jpg" alt="Girl in a jacket">
+                <img class="ice-img" src="/assets/img/ice_02_vase/ice_02_vase-02.jpg" alt="Girl in a jacket">
+                <img class="ice-img" src="/assets/img/ice_02_vase/ice_02_vase-03.jpg" alt="Girl in a jacket">
+                <img class="ice-img" src="/assets/img/ice_02_vase/ice_02_vase-04.jpg" alt="Girl in a jacket">
+                <img class="ice-img" src="/assets/img/ice_02_vase/ice_02_vase-05.jpg" alt="Girl in a jacket">
+                <img class="ice-img" src="/assets/img/ice_02_vase/ice_02_vase-06.jpg" alt="Girl in a jacket">
+                <img class="ice-img" src="/assets/img/ice_02_vase/ice_02_vase-07.jpg" alt="Girl in a jacket">
+                <img class="ice-img" src="/assets/img/ice_02_vase/ice_02_vase-08.jpg" alt="Girl in a jacket">
+                <img class="ice-img" src="/assets/img/ice_02_vase/ice_02_vase-09.jpg" alt="Girl in a jacket">
+                <img class="ice-img" src="/assets/img/ice_02_vase/ice_02_vase-10.jpg" alt="Girl in a jacket">
+                <img class="ice-img" src="/assets/img/ice_02_vase/ice_02_vase-11.jpg" alt="Girl in a jacket">
+                <img class="ice-img" src="/assets/img/ice_02_vase/ice_02_vase-12.jpg" alt="Girl in a jacket">
+                <img class="ice-img" src="/assets/img/ice_02_vase/ice_02_vase-13.jpg" alt="Girl in a jacket">
+                <img class="ice-img" src="/assets/img/ice_02_vase/ice_02_vase-14.jpg" alt="Girl in a jacket">
+                <img class="ice-img" src="/assets/img/ice_02_vase/ice_02_vase-15.jpg" alt="Girl in a jacket">
+            </div>
+            <div class="ice_material">
+                <img class="ice-img" src="/assets/img/ice_05_AnaisRiso/ice_05_AnaisRiso-16.jpg" alt="Girl in a jacket">
+                <img class="ice-img" src="/assets/img/ice_05_AnaisRiso/ice_05_AnaisRiso-15.jpg" alt="Girl in a jacket">
+                <img class="ice-img" src="/assets/img/ice_05_AnaisRiso/ice_05_AnaisRiso-14.jpg" alt="Girl in a jacket">
+                <img class="ice-img" src="/assets/img/ice_05_AnaisRiso/ice_05_AnaisRiso-13.jpg" alt="Girl in a jacket">
+                <img class="ice-img" src="/assets/img/ice_05_AnaisRiso/ice_05_AnaisRiso-12.jpg" alt="Girl in a jacket">
+                <img class="ice-img" src="/assets/img/ice_05_AnaisRiso/ice_05_AnaisRiso-11.jpg" alt="Girl in a jacket">
+                <img class="ice-img" src="/assets/img/ice_05_AnaisRiso/ice_05_AnaisRiso-10.jpg" alt="Girl in a jacket">
+                <img class="ice-img" src="/assets/img/ice_05_AnaisRiso/ice_05_AnaisRiso-09.jpg" alt="Girl in a jacket">
+                <img class="ice-img" src="/assets/img/ice_05_AnaisRiso/ice_05_AnaisRiso-08.jpg" alt="Girl in a jacket">
+                <img class="ice-img" src="/assets/img/ice_05_AnaisRiso/ice_05_AnaisRiso-07.jpg" alt="Girl in a jacket">
+                <img class="ice-img" src="/assets/img/ice_05_AnaisRiso/ice_05_AnaisRiso-06.jpg" alt="Girl in a jacket">
+                <img class="ice-img" src="/assets/img/ice_05_AnaisRiso/ice_05_AnaisRiso-05.jpg" alt="Girl in a jacket">
+                <img class="ice-img" src="/assets/img/ice_05_AnaisRiso/ice_05_AnaisRiso-04.jpg" alt="Girl in a jacket">
+                <img class="ice-img" src="/assets/img/ice_05_AnaisRiso/ice_05_AnaisRiso-03.jpg" alt="Girl in a jacket">
+                <img class="ice-img" src="/assets/img/ice_05_AnaisRiso/ice_05_AnaisRiso-02.jpg" alt="Girl in a jacket">
+                <img class="ice-img" src="/assets/img/ice_05_AnaisRiso/ice_05_AnaisRiso-01.jpg" alt="Girl in a jacket">
+            </div>
+            <div class="ice_material">
+                <img class="ice-img" src="/assets/img/ice_02_vase/ice_02_vase-01.jpg" alt="Girl in a jacket">
+                <img class="ice-img" src="/assets/img/ice_02_vase/ice_02_vase-02.jpg" alt="Girl in a jacket">
+                <img class="ice-img" src="/assets/img/ice_02_vase/ice_02_vase-03.jpg" alt="Girl in a jacket">
+                <img class="ice-img" src="/assets/img/ice_02_vase/ice_02_vase-04.jpg" alt="Girl in a jacket">
+                <img class="ice-img" src="/assets/img/ice_02_vase/ice_02_vase-05.jpg" alt="Girl in a jacket">
+                <img class="ice-img" src="/assets/img/ice_02_vase/ice_02_vase-06.jpg" alt="Girl in a jacket">
+                <img class="ice-img" src="/assets/img/ice_02_vase/ice_02_vase-07.jpg" alt="Girl in a jacket">
+                <img class="ice-img" src="/assets/img/ice_02_vase/ice_02_vase-08.jpg" alt="Girl in a jacket">
+                <img class="ice-img" src="/assets/img/ice_02_vase/ice_02_vase-09.jpg" alt="Girl in a jacket">
+                <img class="ice-img" src="/assets/img/ice_02_vase/ice_02_vase-10.jpg" alt="Girl in a jacket">
+                <img class="ice-img" src="/assets/img/ice_02_vase/ice_02_vase-11.jpg" alt="Girl in a jacket">
+                <img class="ice-img" src="/assets/img/ice_02_vase/ice_02_vase-12.jpg" alt="Girl in a jacket">
+                <img class="ice-img" src="/assets/img/ice_02_vase/ice_02_vase-13.jpg" alt="Girl in a jacket">
+                <img class="ice-img" src="/assets/img/ice_02_vase/ice_02_vase-14.jpg" alt="Girl in a jacket">
+                <img class="ice-img" src="/assets/img/ice_02_vase/ice_02_vase-15.jpg" alt="Girl in a jacket">
+            </div>
+            <div class="ice_material">
+                <img class="ice-img" src="/assets/img/ice_02_vase/ice_02_vase-01.jpg" alt="Girl in a jacket">
+                <img class="ice-img" src="/assets/img/ice_02_vase/ice_02_vase-02.jpg" alt="Girl in a jacket">
+                <img class="ice-img" src="/assets/img/ice_02_vase/ice_02_vase-03.jpg" alt="Girl in a jacket">
+                <img class="ice-img" src="/assets/img/ice_02_vase/ice_02_vase-04.jpg" alt="Girl in a jacket">
+                <img class="ice-img" src="/assets/img/ice_02_vase/ice_02_vase-05.jpg" alt="Girl in a jacket">
+                <img class="ice-img" src="/assets/img/ice_02_vase/ice_02_vase-06.jpg" alt="Girl in a jacket">
+                <img class="ice-img" src="/assets/img/ice_02_vase/ice_02_vase-07.jpg" alt="Girl in a jacket">
+                <img class="ice-img" src="/assets/img/ice_02_vase/ice_02_vase-08.jpg" alt="Girl in a jacket">
+                <img class="ice-img" src="/assets/img/ice_02_vase/ice_02_vase-09.jpg" alt="Girl in a jacket">
+                <img class="ice-img" src="/assets/img/ice_02_vase/ice_02_vase-10.jpg" alt="Girl in a jacket">
+                <img class="ice-img" src="/assets/img/ice_02_vase/ice_02_vase-11.jpg" alt="Girl in a jacket">
+                <img class="ice-img" src="/assets/img/ice_02_vase/ice_02_vase-12.jpg" alt="Girl in a jacket">
+                <img class="ice-img" src="/assets/img/ice_02_vase/ice_02_vase-13.jpg" alt="Girl in a jacket">
+                <img class="ice-img" src="/assets/img/ice_02_vase/ice_02_vase-14.jpg" alt="Girl in a jacket">
+                <img class="ice-img" src="/assets/img/ice_02_vase/ice_02_vase-15.jpg" alt="Girl in a jacket">
+            </div>
+            <div class="ice_material">
+                <img class="ice-img" src="/assets/img/ice_02_vase/ice_02_vase-01.jpg" alt="Girl in a jacket">
+                <img class="ice-img" src="/assets/img/ice_02_vase/ice_02_vase-02.jpg" alt="Girl in a jacket">
+                <img class="ice-img" src="/assets/img/ice_02_vase/ice_02_vase-03.jpg" alt="Girl in a jacket">
+                <img class="ice-img" src="/assets/img/ice_02_vase/ice_02_vase-04.jpg" alt="Girl in a jacket">
+                <img class="ice-img" src="/assets/img/ice_02_vase/ice_02_vase-05.jpg" alt="Girl in a jacket">
+                <img class="ice-img" src="/assets/img/ice_02_vase/ice_02_vase-06.jpg" alt="Girl in a jacket">
+                <img class="ice-img" src="/assets/img/ice_02_vase/ice_02_vase-07.jpg" alt="Girl in a jacket">
+                <img class="ice-img" src="/assets/img/ice_02_vase/ice_02_vase-08.jpg" alt="Girl in a jacket">
+                <img class="ice-img" src="/assets/img/ice_02_vase/ice_02_vase-09.jpg" alt="Girl in a jacket">
+                <img class="ice-img" src="/assets/img/ice_02_vase/ice_02_vase-10.jpg" alt="Girl in a jacket">
+                <img class="ice-img" src="/assets/img/ice_02_vase/ice_02_vase-11.jpg" alt="Girl in a jacket">
+                <img class="ice-img" src="/assets/img/ice_02_vase/ice_02_vase-12.jpg" alt="Girl in a jacket">
+                <img class="ice-img" src="/assets/img/ice_02_vase/ice_02_vase-13.jpg" alt="Girl in a jacket">
+                <img class="ice-img" src="/assets/img/ice_02_vase/ice_02_vase-14.jpg" alt="Girl in a jacket">
+                <img class="ice-img" src="/assets/img/ice_02_vase/ice_02_vase-15.jpg" alt="Girl in a jacket">
+            </div>
         </div>
     </div>
 </body>
