--- a/index.html
+++ b/index.html
@@ -24,5 +24,11 @@
             </li>
         </ul>
     </nav>
+    <!-- <button>
+        <svg width="232" height="64" viewBox="0 0 232 64" fill="none" xmlns="http://www.w3.org/2000/svg">
+          <path id="btn-path" d="M32 1.5H200C216.845 1.5 230.5 15.1553 230.5 32C230.5 48.8447 216.845 62.5 200 62.5H32C15.1553 62.5 1.5 48.8447 1.5 32C1.5 15.1553 15.1553 1.5 32 1.5Z" fill="#7257FA" stroke="#352970" stroke-width="3" />
+        </svg>
+        Hover me! 💛
+    </button> -->
 </body>
 </html>
