--- a/timeline.html
+++ b/timeline.html
@@ -8,10 +8,10 @@
     <meta name="description" content="Ice Transformation — Iteration 2, Thesis I (Home Page)">
     <meta name="author" content="Aoi Sejima">
     <link rel="shortcut icon" type="image/png" href="./assets/img/DSC_4544.JPG" />
-    <link rel="stylesheet" href="./css/timeline.css">
+    <link rel="stylesheet" href="./css/timeline2.css">
     <link rel="stylesheet" href="https://use.typekit.net/sos3kuf.css">
-    <!-- <script type="text/javascript" src="./js/airtable.browser.js" ></script> -->
-    <!-- <script type="text/javascript" src="./js/script.js" defer></script> -->
+    <script type="text/javascript" src="./js/airtable.browser.js" ></script>
+    <script type="text/javascript" src="./js/script2.js" defer></script>
 </head>
 <body>
     <h1>
@@ -43,37 +43,41 @@
     </nav> -->
     <div class="js-container">
         <div class="js-filter-material">
-            <span class="js-reset">RESET</span>
-            <span class="js-ceramicPlate">Ceramic Plate</span>
-            <span class="js-glassBottle">Glass Bottle</span>
-            <span class="js-glassVase">Glass Vase</span>
-            <span class="js-lenineFabric">Lenine Fabric</span>
-            <span class="js-newspaper">Newspaper</span>
-            <span class="js-newsprintPaper">Newsprint Paper</span>
-            <span class="js-mattePresentationPaper1">Matte Presentation Paper 1</span>
-            <span class="js-mattePresentationPaper2">Matte Presentation Paper 2</span>
-            <span class="js-mattePresentationPaper3">Matte Presentation Paper 3</span>
+            <div class="js-filter-time">
+                <span class="time click-00">00:00:00</span>
+                <span class="time click-01">00:10:00</span>
+                <span class="time click-02">00:20:00</span>
+                <span class="time click-03">00:30:00</span>
+                <span class="time click-04">00:40:00</span>
+                <span class="time click-05">00:50:00</span>
+                <span class="time click-06">01:00:00</span>
+                <span class="time click-07">01:10:00</span>
+                <span class="time click-08">01:20:00</span>
+                <span class="time click-09">01:30:00</span>
+                <span class="time click-10">01:40:00</span>
+                <span class="time click-11">01:50:00</span>
+                <span class="time click-12">02:00:00</span>
+                <span class="time click-13">02:10:00</span>
+                <span class="time click-14">02:20:00</span>
+                <span class="time click-15">02:30:00</span>
+            </div>
+            <div class="js-filter-material">
+                <span class="material click-reset">RESET</span>
+                <span class="material click-ceramicPlate">Ceramic Plate</span>
+                <span class="material click-glassBottle">Glass Bottle</span>
+                <span class="material click-colander">Colander</span>
+                <span class="material click-glassVase">Glass Vase</span>
+                <span class="material click-lenineFabric">Lenine Fabric</span>
+                <span class="material click-newspaper">Newspaper</span>
+                <span class="material click-newsprintPaper">Newsprint Paper</span>
+                <span class="material click-mattePresentationPaper1">Matte Presentation Paper 1</span>
+                <span class="material click-mattePresentationPaper2">Matte Presentation Paper 2</span>
+                <span class="material click-mattePresentationPaper3">Matte Presentation Paper 3</span>
+            </div>
         </div>
-        <div class="js-filter-time">
-            <span class="time" class="js-01">0:00:00</span>
-            <span class="time" class="js-02">0:10:00</span>
-            <span class="time" class="js-03">0:20:00</span>
-            <span class="time" class="js-04">0:30:00</span>
-            <span class="time" class="js-05">0:40:00</span>
-            <span class="time" class="js-06">0:50:00</span>
-            <span class="time" class="js-07">1:00:00</span>
-            <span class="time" class="js-08">1:10:00</span>
-            <span class="time" class="js-09">1:20:00</span>
-            <span class="time" class="js-10">1:30:00</span>
-            <span class="time" class="js-11">1:40:00</span>
-            <span class="time" class="js-12">1:50:00</span>
-            <span class="time" class="js-13">2:00:00</span>
-            <span class="time" class="js-14">2:10:00</span>
-            <span class="time" class="js-15">2:20:00</span>
-            <span class="time" class="js-16">2:30:00</span>
-        </div>
-        <div class="img-container">
-            <div class="ice_material">
+        <div class="ices-container"></div>
+        <!-- <div class="img-container">
+            <div class="ice_material"> 
                 <img class="ice-img" src="/assets/img/ice_01_plate/ice_01_ceramicPlate-01.jpg" alt="Girl in a jacket">
                 <img class="ice-img" src="/assets/img/ice_01_plate/ice_01_ceramicPlate-02.jpg" alt="Girl in a jacket">
                 <img class="ice-img" src="/assets/img/ice_01_plate/ice_01_ceramicPlate-03.jpg" alt="Girl in a jacket">
@@ -90,6 +94,23 @@
                 <img class="ice-img" src="/assets/img/ice_01_plate/ice_01_ceramicPlate-14.jpg" alt="Girl in a jacket">
                 <img class="ice-img" src="/assets/img/ice_01_plate/ice_01_ceramicPlate-15.jpg" alt="Girl in a jacket">
                 <img class="ice-img" src="/assets/img/ice_01_plate/ice_01_ceramicPlate-17.jpg" alt="Girl in a jacket">
+            </div>
+            <div class="ice_material">
+                <img class="ice-img" src="/assets/img/ice_02_vase/ice_02_vase-01.jpg" alt="Girl in a jacket">
+                <img class="ice-img" src="/assets/img/ice_02_vase/ice_02_vase-02.jpg" alt="Girl in a jacket">
+                <img class="ice-img" src="/assets/img/ice_02_vase/ice_02_vase-03.jpg" alt="Girl in a jacket">
+                <img class="ice-img" src="/assets/img/ice_02_vase/ice_02_vase-04.jpg" alt="Girl in a jacket">
+                <img class="ice-img" src="/assets/img/ice_02_vase/ice_02_vase-05.jpg" alt="Girl in a jacket">
+                <img class="ice-img" src="/assets/img/ice_02_vase/ice_02_vase-06.jpg" alt="Girl in a jacket">
+                <img class="ice-img" src="/assets/img/ice_02_vase/ice_02_vase-07.jpg" alt="Girl in a jacket">
+                <img class="ice-img" src="/assets/img/ice_02_vase/ice_02_vase-08.jpg" alt="Girl in a jacket">
+                <img class="ice-img" src="/assets/img/ice_02_vase/ice_02_vase-09.jpg" alt="Girl in a jacket">
+                <img class="ice-img" src="/assets/img/ice_02_vase/ice_02_vase-10.jpg" alt="Girl in a jacket">
+                <img class="ice-img" src="/assets/img/ice_02_vase/ice_02_vase-11.jpg" alt="Girl in a jacket">
+                <img class="ice-img" src="/assets/img/ice_02_vase/ice_02_vase-12.jpg" alt="Girl in a jacket">
+                <img class="ice-img" src="/assets/img/ice_02_vase/ice_02_vase-13.jpg" alt="Girl in a jacket">
+                <img class="ice-img" src="/assets/img/ice_02_vase/ice_02_vase-14.jpg" alt="Girl in a jacket">
+                <img class="ice-img" src="/assets/img/ice_02_vase/ice_02_vase-15.jpg" alt="Girl in a jacket">
             </div>
             <div class="ice_material">
                 <img class="ice-img" src="/assets/img/ice_02_vase/ice_02_vase-01.jpg" alt="Girl in a jacket">
@@ -213,24 +234,7 @@
                 <img class="ice-img" src="/assets/img/ice_02_vase/ice_02_vase-14.jpg" alt="Girl in a jacket">
                 <img class="ice-img" src="/assets/img/ice_02_vase/ice_02_vase-15.jpg" alt="Girl in a jacket">
             </div>
-            <div class="ice_material">
-                <img class="ice-img" src="/assets/img/ice_02_vase/ice_02_vase-01.jpg" alt="Girl in a jacket">
-                <img class="ice-img" src="/assets/img/ice_02_vase/ice_02_vase-02.jpg" alt="Girl in a jacket">
-                <img class="ice-img" src="/assets/img/ice_02_vase/ice_02_vase-03.jpg" alt="Girl in a jacket">
-                <img class="ice-img" src="/assets/img/ice_02_vase/ice_02_vase-04.jpg" alt="Girl in a jacket">
-                <img class="ice-img" src="/assets/img/ice_02_vase/ice_02_vase-05.jpg" alt="Girl in a jacket">
-                <img class="ice-img" src="/assets/img/ice_02_vase/ice_02_vase-06.jpg" alt="Girl in a jacket">
-                <img class="ice-img" src="/assets/img/ice_02_vase/ice_02_vase-07.jpg" alt="Girl in a jacket">
-                <img class="ice-img" src="/assets/img/ice_02_vase/ice_02_vase-08.jpg" alt="Girl in a jacket">
-                <img class="ice-img" src="/assets/img/ice_02_vase/ice_02_vase-09.jpg" alt="Girl in a jacket">
-                <img class="ice-img" src="/assets/img/ice_02_vase/ice_02_vase-10.jpg" alt="Girl in a jacket">
-                <img class="ice-img" src="/assets/img/ice_02_vase/ice_02_vase-11.jpg" alt="Girl in a jacket">
-                <img class="ice-img" src="/assets/img/ice_02_vase/ice_02_vase-12.jpg" alt="Girl in a jacket">
-                <img class="ice-img" src="/assets/img/ice_02_vase/ice_02_vase-13.jpg" alt="Girl in a jacket">
-                <img class="ice-img" src="/assets/img/ice_02_vase/ice_02_vase-14.jpg" alt="Girl in a jacket">
-                <img class="ice-img" src="/assets/img/ice_02_vase/ice_02_vase-15.jpg" alt="Girl in a jacket">
-            </div>
-        </div>
+        </div> -->
     </div>
 </body>
 </html>
