--- a/timeline.html
+++ b/timeline.html
@@ -58,22 +58,18 @@
                 <span class="time">02:30:00</span>
             </div>
             <div class="imgs-container">
-                <div class="img_container"> 
+                <div class="ice_img_container"> 
                     <img class="ice-img" src="/assets/img/ice_01_ceramicPlate/ice_01_ceramicPlate-01.jpg" alt="Ice on Ceramic Plate 01">
                     <img class="ice-img" src="/assets/img/ice_01_ceramicPlate/ice_01_ceramicPlate-02.jpg" alt="Ice on Ceramic Plate 02">
                     <img class="ice-img" src="/assets/img/ice_01_ceramicPlate/ice_01_ceramicPlate-03.jpg" alt="Ice on Ceramic Plate 03">
-                    <img class="ice-img" src="/assets/img/ice_01_ceramicPlate/ice_01_ceramicPlate-04.jpg" alt="Ice on Ceramic Plate 04">
                     <img class="ice-img" src="/assets/img/ice_01_ceramicPlate/ice_01_ceramicPlate-05.jpg" alt="Ice on Ceramic Plate 05">
-                    <img class="ice-img" src="/assets/img/ice_01_ceramicPlate/ice_01_ceramicPlate-06.jpg" alt="Ice on Ceramic Plate 06">
                     <img class="ice-img" src="/assets/img/ice_01_ceramicPlate/ice_01_ceramicPlate-07.jpg" alt="Ice on Ceramic Plate 07">
                     <img class="ice-img" src="/assets/img/ice_01_ceramicPlate/ice_01_ceramicPlate-08.jpg" alt="Ice on Ceramic Plate 08">
                     <img class="ice-img" src="/assets/img/ice_01_ceramicPlate/ice_01_ceramicPlate-09.jpg" alt="Ice on Ceramic Plate 09">
-                    <img class="ice-img" src="/assets/img/ice_01_ceramicPlate/ice_01_ceramicPlate-10.jpg" alt="Ice on Ceramic Plate 10">
+                    <img class="ice-img" src="/assets/img/ice_01_ceramicPlate/Sequence 01.gif" alt="Ice on Ceramic Plate GIF">
+                    <div class="ice-img"></div>
+                    <img class="ice-img" src="/assets/img/ice_01_ceramicPlate/ice_01_ceramicPlate-12.jpg" alt="Ice on Ceramic Plate 11">
                     <img class="ice-img" src="/assets/img/ice_01_ceramicPlate/ice_01_ceramicPlate-11.jpg" alt="Ice on Ceramic Plate 11">
-                    <img class="ice-img" src="/assets/img/ice_01_ceramicPlate/ice_01_ceramicPlate-12.jpg" alt="Ice on Ceramic Plate 12">
-                    <img class="ice-img" src="/assets/img/ice_01_ceramicPlate/ice_01_ceramicPlate-13.jpg" alt="Ice on Ceramic Plate 13">
-                    <img class="ice-img" src="/assets/img/ice_01_ceramicPlate/ice_01_ceramicPlate-14.jpg" alt="Ice on Ceramic Plate 14">
-                    <img class="ice-img" src="/assets/img/ice_01_ceramicPlate/ice_01_ceramicPlate-15.jpg" alt="Ice on Ceramic Plate 15">
                     <img class="ice-img" src="/assets/img/ice_01_ceramicPlate/ice_01_ceramicPlate-17.jpg" alt="Ice on Ceramic Plate 16">
                 </div>
                 <div class="ice_img_container">
@@ -81,17 +77,19 @@
                     <img class="ice-img" src="/assets/img/ice_02_glassBottle/ice_02_glassBottle-04.jpg" alt="Ice on Glass Bottle 02">
                     <img class="ice-img" src="/assets/img/ice_02_glassBottle/ice_02_glassBottle-03.jpg" alt="Ice on Glass Bottle 03">
                     <img class="ice-img" src="/assets/img/ice_02_glassBottle/ice_02_glassBottle-02.jpg" alt="Ice on Glass Bottle 04">
+                    <img class="ice-img" src="/assets/img/ice_02_glassBottle/ice_02_glassBottle.gif" alt="Ice on Glass Bottle 02">
                     <img class="ice-img" src="/assets/img/ice_02_glassBottle/ice_02_glassBottle-01.jpg" alt="Ice on Glass Bottle 05">
                 </div>
                 <div class="ice_img_container">
                     <img class="ice-img" src="/assets/img/ice_03_colander/ice_03_colander-01.jpg" alt="Ice on Colander 01">
+                    <img class="ice-img" src="/assets/img/ice_03_colander/ice_03_colander-01.gif" alt="Ice on Colander 02">
                     <img class="ice-img" src="/assets/img/ice_03_colander/ice_03_colander-02.jpg" alt="Ice on Colander 02">
                     <img class="ice-img" src="/assets/img/ice_03_colander/ice_03_colander-03.jpg" alt="Ice on Colander 03">
                     <img class="ice-img" src="/assets/img/ice_03_colander/ice_03_colander-04.jpg" alt="Ice on Colander 04">
                     <img class="ice-img" src="/assets/img/ice_03_colander/ice_03_colander-05.jpg" alt="Ice on Colander 05">
                     <img class="ice-img" src="/assets/img/ice_03_colander/ice_03_colander-06.jpg" alt="Ice on Colander 06">
                     <img class="ice-img" src="/assets/img/ice_03_colander/ice_03_colander-07.jpg" alt="Ice on Colander 07">
-                    <img class="ice-img" src="/assets/img/ice_03_colander/ice_03_colander-08.jpg" alt="Ice on Colander 08">
+                    <img class="ice-img" src="/assets/img/ice_03_colander/ice_03_colander-02.gif" alt="Ice on Colander 02">
                     <img class="ice-img" src="/assets/img/ice_03_colander/ice_03_colander-14.jpg" alt="Ice on Colander 14">
                     <img class="ice-img" src="/assets/img/ice_03_colander/ice_03_colander-15.jpg" alt="Ice on Colander 15">
                     <img class="ice-img" src="/assets/img/ice_03_colander/ice_03_colander-18.jpg" alt="Ice on Colander 18">
@@ -102,7 +100,6 @@
                 </div>
                 <div class="ice_img_container">
                     <img class="ice-img" src="/assets/img/ice_04_glassVase/ice_04_glassVase-15.jpg" alt="Ice on Glass Vase 01">
-                    <img class="ice-img" src="/assets/img/ice_04_glassVase/ice_04_glassVase-14.jpg" alt="Ice on Glass Vase 02">
                     <img class="ice-img" src="/assets/img/ice_04_glassVase/ice_04_glassVase-12.jpg" alt="Ice on Glass Vase 03">
                     <img class="ice-img" src="/assets/img/ice_04_glassVase/ice_04_glassVase-11.jpg" alt="Ice on Glass Vase 04">
                     <img class="ice-img" src="/assets/img/ice_04_glassVase/ice_04_glassVase-10.jpg" alt="Ice on Glass Vase 05">
@@ -129,12 +126,14 @@
                     <img class="ice-img" src="/assets/img/ice_05_lenineFabric/ice_05_lenineFabric-01.jpg" alt="Ice on Lenine Fabric 09">
                 </div>
                 <div class="ice_img_container">
+                    <img class="ice-img" src="/assets/img/ice_06_newspaper/ice_newspaper.gif" alt="Ice on Newspaper 04">
                     <img class="ice-img" src="/assets/img/ice_06_newspaper/ice_06_newspaper-04.jpg" alt="Ice on Newspaper 04">
                     <img class="ice-img" src="/assets/img/ice_06_newspaper/ice_06_newspaper-03.jpg" alt="Ice on Newspaper 03">
                     <img class="ice-img" src="/assets/img/ice_06_newspaper/ice_06_newspaper-02.jpg" alt="Ice on Newspaper 02">
                     <img class="ice-img" src="/assets/img/ice_06_newspaper/ice_06_newspaper-01.jpg" alt="Ice on Newspaper 01">
                 </div>
                 <div class="ice_img_container">
+                    <img class="ice-img" src="/assets/img/ice_07_newsprint/ice_07_newsprint.gif" alt="Ice on Newsprint 01">
                     <img class="ice-img" src="/assets/img/ice_07_newsprint/ice_07_newsprint-15.jpg" alt="Ice on Newsprint 01">
                     <img class="ice-img" src="/assets/img/ice_07_newsprint/ice_07_newsprint-14.jpg" alt="Ice on Newsprint 02">
                     <img class="ice-img" src="/assets/img/ice_07_newsprint/ice_07_newsprint-13.jpg" alt="Ice on Newsprint 03">
